<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2026 nullpointer1101

     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_priority_title">

    <ListPreference
        android:key="app_priority_key"
        android:title="@string/app_priority_title"
        android:summary="@string/app_priority_summary"
        android:entries="@array/app_priority_entries"
        android:entryValues="@array/app_priority_values"
        android:defaultValue="off"
        android:persistent="true" />

    <com.android.settingslib.widget.FooterPreference
        android:key="app_priority_footer"
        android:title="@string/app_priority_footer"
        android:selectable="false" />

</PreferenceScreen>
